<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">15 Puzzle</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="author">Masaaki Horikawa</string>
    <string name="bemax_title">Vocational school Be-MAX</string>
    <string name="shuffle_btn">SHUFFLE</string>
    <string name="gallery">From a gallery to image selection </string>
    <string name="about_bemax">About Be-MAX</string>
    <string name="mode_3x3">8 panels mode</string>
    <string name="mode_4x4">15 panels mode</string>
    <string name="mode_5x5">24 panels mode</string>
    <string name="mode_menu">Mode select</string>
    <string name="mode_select_title">Mode select</string>
    <string name="bemax_discription">It learns happily and works in Okayama!!\n Vocational school Be-Max has produced a large number of the members of society by whom it is full of much volition in Okayama at a base for 35 years since foundation.
It is strong to employment and has obtained high evaluation also in human education. </string>
    <string name="look_homepage">Look a Be-MAX homepage</string>
    <string name="look_facebook">Look a Be-MAX facebook</string>
    <string name="bemax_image_description">The photograph of a vocational school Be-MAX</string>
    <string name="title_activity_camera">Camera mode</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="camera_shot">写真を撮る</string>
    <string name="shuttor">SHUTTOR</string>
    <string name="return_button">RETURN</string>

</resources>